# football-tactical-ai

./: .gitignore  README.md  biome.json  package.json  pyproject.toml  tsconfig.app.json  tsconfig.check.json  tsconfig.json  vite.config.dev.ts
ai/models/: player_similarity.py
frontend/: .env  index.html
frontend/docs/: prd.md
frontend/src/: App.css  App.tsx  index.css  routes.tsx
frontend/src/db/: api.ts  supabase.ts
src/analytics/: apply_epv.py  apply_xt.py  buildup_analysis.py  counter_attack_detection.py  match_simulator.py  pass_network.py  player_shot_map.py  progressive_passes.py  sequence_analysis.py  shot_map.py  shot_map_half.py  team_comparison.py  train_xt_model.py  xg_heatmap.py  xg_model.py  xt_heatmap.py  xt_model.py
src/dashboard/: app.py
src/data/: load_events.py
src/features/: masked_sequences.py  passing_graph.py  possessions.py  sequence_encoder.py  spatial_features.py  team_embeddings.py
src/ingestion/: download_data.py
src/models/: epv_model.py  gnn_model.py  gnn_passing_model.py  match_state_model.py  pass_network_gnn.py  player_similarity.py  playstyle_cluster.py  positional_encoding.py  possession_transformer.py  pressing_model.py  self_supervised_transformer.py  sequence_transformer.py  spatial_gnn.py  spatiotemporal_model.py
src/pipelines/: build_self_supervised_dataset.py  tactical_intelligence.py  train_epv.py  train_football_ai.py  train_match_simulator.py  train_pass_gnn.py  train_possession_transformer.py  train_self_supervised_model.py
src/rl/: football_env.py  tactical_agent.py  tactical_policy.py  train_agent.py
(+37 files in other folders)
