[project]
name = "football-tactical-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "mplsoccer (>=1.6.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "streamlit (>=1.55.0,<2.0.0)",
    "plotly (>=6.6.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
